--- a/lab1/styles/main_styles.css
+++ b/lab1/styles/main_styles.css
@@ -17,9 +17,9 @@
     padding: 1rem;
     min-width: 2rem;
     min-height: .5rem;
-    border-radius: 50%;
     margin-top: .2rem;
     color: #fff;
+    background-color: rgb(0, 0, 0);
 }
 
 .container-main {
