--- a/lab1/styles/rules_styles.css
+++ b/lab1/styles/rules_styles.css
@@ -30,5 +30,17 @@
     border-radius: 50%;
     margin-top: .2rem;
     color: #fff;
-    
+}
+
+footer {
+    position: bottom;
+    left: 0; bottom: 0;
+    padding: 10px;
+    background: #39b54a;
+    color: #fff;
+    width: 100%;
+}
+
+footer .copyright {
+    text-align: center;
 }
