--- a/lab1/styles/field_styles.css
+++ b/lab1/styles/field_styles.css
@@ -68,11 +68,16 @@
     background-color: beige;
 }
 
+.board .piece {
+    width: 3em;
+    height: 3em;
+}
+
 footer {
     position: bottom;
     left: 0; bottom: 0;
     padding: 10px;
-    background: #39b54a;
+    background: #015d66;
     color: #fff;
     width: 100%;
 }
