--- a/lab1/styles/main_styles.css
+++ b/lab1/styles/main_styles.css
@@ -37,7 +37,7 @@ footer {
     position: bottom;
     left: 0; bottom: 0;
     padding: 10px;
-    background: #39b54a;
+    background: #015d66;
     color: #fff;
     width: 100%;
 }
