--- a/lab2/styles/about_styles.css
+++ b/lab2/styles/about_styles.css
@@ -91,18 +91,35 @@ nav {
     top: 2px;
 }
 
-aside {
-    width: auto;
-    height: 100vh;
+.container {
+    min-height: 30vh;
     display: flex;
-    border: 2px solid rgb(0, 0, 0);
 }
 
-.text {
+aside {
+    width: 15vw;
+    height: auto;
+    display: flex;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+article {
+    width: 65%;
     font-size: 1.3rem;
+    margin-left: 210px;
+    margin-right: 0;
 }
 
-.text .header {
+article .header {
     color: rgb(0, 64, 114);
 }
 
