--- a/lab2/styles/about_styles.css
+++ b/lab2/styles/about_styles.css
@@ -8,6 +8,9 @@ body {
 }
 
 header {
+    width: 100%;
+    height: 5vh;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,6 +34,7 @@ header:hover {
 nav {
     display: flex;
     position: fixed;
+    margin-top: 3em;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 3%;
     flex-direction: column;
@@ -92,7 +96,7 @@ nav {
 }
 
 .container {
-    min-height: 30vh;
+    min-height: 35vh;
     display: flex;
 }
 
@@ -105,6 +109,7 @@ aside {
 }
 
 section {
+    margin-top: 3em;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -113,6 +118,7 @@ section {
 }
 
 article {
+    margin-top: 3em;
     width: 65%;
     font-size: 1.3rem;
     margin-left: 210px;
