--- a/lab2/styles/main_styles.css
+++ b/lab2/styles/main_styles.css
@@ -4,6 +4,9 @@
 }
 
 header {
+    width: 100%;
+    height: auto;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,6 +30,7 @@ header:hover {
 nav {
     display: flex;
     position: fixed;
+    margin-top: 3em;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 3%;
     flex-direction: column;
