--- a/lab3/css/field_styles.css
+++ b/lab3/css/field_styles.css
@@ -135,6 +135,7 @@ nav {
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-left: 0.4em;
     background-color: rgb(0, 0, 0);
     border-radius: 2em;
 }
@@ -145,8 +146,34 @@ nav {
     display: flex;
     justify-content: center;
     align-content: center;
+    align-items: center;
+    margin-left: 0.4em;
     background-color: rgb(255, 255, 255);
     border-radius: 2em;
+}
+
+.black-lady {
+    width: 4em;
+    height: 4em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: rgb(0, 0, 0);
+    border-radius: 2em;
+    margin-left: 0.4em;
+    border: 4px solid rgb(255, 0, 0);
+}
+
+.white-lady {
+    width: 4em;
+    height: 4em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 2em;
+    margin-left: 0.4em;
+    border: 4px solid red;
 }
 
 footer {
