--- a/lab4/css/field_styles.css
+++ b/lab4/css/field_styles.css
@@ -116,11 +116,15 @@ p {
 }
 
 .game-recording-container {
-    width: 30vw;
-    height: auto;
+    width: 10vw;
+    height: 40em;
+    margin-left: 70em;
 }
 
-
+textarea {
+    width: 10vw;
+    height: 40em;
+}
 
 .container {
     width: 100vw;
@@ -132,7 +136,14 @@ p {
     align-items: center;
 }
 
+.container-left {
+    width: 10vw;
+    height: auto;
+}
+
 .container .board {
+    width: auto;
+    position: absolute;
     border-spacing: 0;
     border-collapse: collapse;
 }
