--- a/lab5/css/field_styles.css
+++ b/lab5/css/field_styles.css
@@ -250,6 +250,10 @@ button:hover {
     border: 4px solid red;
 }
 
+.record-error {
+    color: red;
+}
+
 footer {
     position: bottom;
     left: 0; bottom: 0;
