--- a/lab4/css/field_styles.css
+++ b/lab4/css/field_styles.css
@@ -21,6 +21,7 @@ header {
     color: #333;
     background-color: rgb(91, 167, 253);
     transition: all 1s;
+    z-index: 2;
 }
   
 header:hover {
@@ -40,6 +41,7 @@ nav {
     flex-direction: column;
     min-height: auto;
     padding: 0.75rem;
+    z-index: 2;
 }
 
 .button {
@@ -112,7 +114,8 @@ p {
     height: 5vh;
     display: flex;
     justify-content: center;
-    margin-bottom: 1em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .game-recording-container {
@@ -122,13 +125,13 @@ p {
 }
 
 textarea {
-    width: 10vw;
-    height: 40em;
+    width: 100%;
+    height: 100%;
 }
 
 .container {
     width: 100vw;
-    height: 75vh;
+    height: 100%;
     margin-top: 0;
     margin-bottom: 0;
     display: flex;
@@ -170,6 +173,7 @@ textarea {
 }
 
 .game-buttons-container {
+    margin-bottom: 2em;
     display: flex;
     flex-direction: row;
     justify-content: center;
